Compiled UnrealVS in VS2019 to make it load correctly in VS2019.
Bumped version number to trigger a reinstall.

Updated release notes.

#rb joe.pribele
#jira UE-174627
#lockdown jeanmichel.dignard
#preflight 63e0e0a09740e583f41f5230

[CL 24029832 by sebastian nordgren in 5.2 branch]

--- a/Engine/Source/Programs/UnrealVS/ReleaseNotes.txt
+++ b/Engine/Source/Programs/UnrealVS/ReleaseNotes.txt
@@ -1,3 +1,9 @@
+1.83
+* Open for Edit now also Adds if the file is not already added
+* added Revert command
+* the File History command no longer hangs
+* the Timelapse command now scrolls to the current line
+
 1.80
 * updated Unreal.TestAdapater to report duration's
 * added a menu for extension to improve discover-ability of features
